--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="choose_number_orbs_label"># orbs</string>
     <string name="choose_number_enhanced_label"># enhanced</string>
     <string name="choose_shape_label">Shape</string>
+    <string name="menu_new_team">New Team</string>
 
     <string-array name="orb_types">
         <item>Red</item>
