--- a/app/src/main/assets/todo.txt
+++ b/app/src/main/assets/todo.txt
@@ -2,10 +2,13 @@ Set save disabled 52517
     - When there is nothing to save
     - When no changes have been made
 
+Padherder
+    - SharedPreferences for account names
+    - Sync to update monsters and teams
+    - Two team pointer DB and one main one (with the acutal monsters)
+        - One points to PH teams, one points to manual teams
+    - Same with Monsters
 
-Saving Monsters in teams
-    - Update the teamlist when needed
-    - fix problem with TPF and EMF showing diff values
 
 
 
