--- a/app/src/main/assets/todo.txt
+++ b/app/src/main/assets/todo.txt
@@ -9,7 +9,9 @@ Padherder
         - One points to PH teams, one points to manual teams
     - Same with Monsters
 
-
+Navigation Drawer
+    - Instead of traversing app through menus
+    - Put manage accounts and teamlist in nav drawer
 
 
 Dungeon Info
